# learn-python

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: reuse-super-linter.yml  super-linter.yml
algorithms/hackerrank/basic_data_types/: python_lists_eval.py
algorithms/hackerrank/built_ins/: any_or_all.py
algorithms/hackerrank/collections/: counter.py  deque.py
algorithms/hackerrank/decorators/: sort_names.py
algorithms/hackerrank/errors/: incorrect_regex.py
algorithms/hackerrank/introduction/: if_else.py  print.py
algorithms/hackerrank/itertools/: combinations.py  product.py
algorithms/hackerrank/sets/: check_strict_superset.py  set_difference_operation.py  set_intersection_operation.py  set_mutations.py
algorithms/hackerrank/strings/: capitalize.py  designer_door_mat.py  find_a_string.py  python_string_formatting.py
books/fluentpython/data_model/: french_deck.py  vector2d.py
books/head_first_v2/ch1/: beersong.py
books/head_first_v2/ch2/: marvin.py  marvin2.py
books/head_first_v2/ch3/: dictionary_of_dictionaries.py  vowels4.py
books/head_first_v2/ch4/: README.md  vpresent.py  vsearch_shorter.py
books/head_first_v2/ch6/: todos.txt
books/head_first_v2/web_server/: README.md
demos/too_many_args/: too_many_args.py  use_args.py  use_classes.py  use_dataclasses.py  use_kwargs.py  use_namedtuples.py
demos/try_catch_vs_fixtures/: existing_tests.py  recommended_tests.py  test_environment_mock.py
dsa/dynamic/: knapsack_problem.py
dsa/sort_arrays/: bubble_sort.py  counting_sort.py  hybrids.py  merge_sort.py  quick_sort.py  radix_sort.py  selection_sort.py  test_sort_arrays.py
dsa/structures/: linked_lists.py  my_hash_map.py  my_hash_set.py  my_hash_table.py  my_queue.py  my_stack.py
dsa/structures/graphs/: abc_base_graph.py  adjacency_list_directed_with_weight.py  adjacency_list_undirected.py  adjacency_matrix_directed_with_weight.py  adjacency_matrix_traverser.py  adjacency_matrix_undirected.py  adjacency_matrix_undirected_with_weight.py  dijkstra.py  dijkstra_shortest_path.py  my_naive.py  my_naive_path.py  with_iterable_subgraph.py
dsa/structures/trees/: my_avl_tree.py  my_binary_search_tree.py  (+1 more)
experiments/: resiliency_test_urls.py
fluentpython/types/: attribute_descriptors.py  type_hints.py
hackerrank/basic_data_types/: find_second_maximum_number_in_list.py  finding_the_percentage.py  list_comprehensions.py  nested_list.py  python_lists_getattr.py  python_lists_straightforward.py
hackerrank/built_ins/: input.py  zipped.py
hackerrank/calendar/: calendar_task.py
hackerrank/collections/: defaultdict.py  namedtuple.py  ordereddict.py
hackerrank/decorators/: sort_phones.py
hackerrank/errors/: errors.py
hackerrank/functionals/: map_lambda.py
hackerrank/introduction/: division.py  function.py  if_else.py
hackerrank/itertools/: combinations_with_replacement.py  permutations.py
hackerrank/math/: big_integers.py  mod_divmod.py
hackerrank/regex/: is_float.py  re_split.py
hackerrank/sets/: check_subset.py  introduction_to_sets.py  py_set_add.py  set_discard_remove_pop.py  set_symmetric_difference_operation.py  set_union.py  symmetric_difference.py
hackerrank/strings/: alphabet_rangoli.py  alphabet_rangoli_short.py  string_validators.py  the_minion_game.py
hackerrank/xml/: find_the_score.py
head_first_v2/ch1/: odd.py
head_first_v2/ch2/: save_vowels.py
head_first_v2/ch3/: vowels2.py  vowels3.py  vowels5.py
head_first_v2/ch4/: conftest.py  search_for_letters.py  vsearch.py  vsearch_pep8.py
head_first_v2/web_server/: README.md  docker-compose.yml  hello_flask.py
head_first_v2/ср2/: panic.py  panic2.py  vowels.py
leetcode/problems/: is_palindrome.py
src/data_structures/: my_hash_map.py  my_hash_set.py  my_linked_list.py
src/maths/: decimals.py  euclidean_algorithm.py  two_sum.py
src/python_specifics/: attribute_descriptors.py  french_deck.py
visuals/: quick_start.py  shapes_example.py  simple_clock.py
(+34 files in other folders)
