[tool.poetry]
name = "learn-python"
version = "1.5.6"
description = "Learn to use Python"
authors = ["Sasha Bondarev <no@email.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"

pyglet = "==2.0.10"
pytest = "==7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
