[tool.poetry]
name = "learn-python"
version = "1.5.6"
description = "Learn to use Python"
authors = ["Sasha Bondarev <no@email.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"

pyglet = "==2.0.10"
pytest = "==7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90


[tool.ruff.lint]
select = ["ALL"]


ignore = [
   "ANN", # We should not force typing
   "D", # docstrings are overrated
   "F811", # Ruff thinks that pytest fixtures are not used
   "FA100", "FA102", # We should not aim to support python < 3.10
   "FIX002", # Keeping To Do in code
   "ISC002", # I don't find it that important
   "N805", # Sounds good check but when I need `cls` it fails
   "N815", # Not convinient if using pydantic or other sort of code where the actual typing matters
   "PYI025", # IMHO this would cause type hints to be longer and less readable
   "S101", # Assers are needed
   "TCH001", # Not sure which is the fix for @dataclass
]

